--- a/1-8.md
+++ b/1-8.md
@@ -9,3 +9,45 @@ this is good
 void foo(int x) {
 }
 ```
+
+
+# How to use
+1. Copy the texts in this file.
+2. Go to your own repo for note taking. (create one if you don't have it)
+3. Create a new file in your note taking repo, and paste the text in it.
+4. During each lecture, edit the note file in your repo with new notes.
+
+The below is the note template.
+
+## Week X: [Topic Name]
+
+### Date: [Date]
+
+## Key Concepts
+
+- List of important concepts covered in the lecture.
+  - Concept 1
+  - Concept 2
+  - ...
+
+## Code Snippets
+
+Include relevant code snippets discussed in the lecture.
+
+```java
+# Example Python code
+public static void foo(int[] array) {
+}
+```
+
+## Questions (Things I didn't understand)
+
+- What's a variabe?
+  - Notes:
+  - To be resolved by: end of 2nd week by talking to the teacher after lecture.
+- ... 
+     
+## TODOs
+- [ ] Go over the code we did in class
+- [ ] Start working on homework 1. **DUE: 1/10 (Wed)**
+- [ ] ...
